@@ -46,6 +46,11 @@ Summary of important user-visible changes for version 4.0:
 
       allow_noninteger_range_as_index
       do_braindead_shortcircuit_evaluation
+      
+    The internal function atan2 of the sparse matrix class has been deprecated
+    in Octave 4.0 and will be removed from Octave 4.4 (or whatever version is
+    the second major release after 4.0).  Use the Fatan2 function with sparse
+    inputs as a replacement.
 
 ---------------------------------------------------------
 
